# Gift-ai

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  donations-2026-04-02T10_39_21.660Z.csv  donations-report.csv  donations.csv  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260330_0001_initial.py  20260330_0002_normalized_supporters.py  20260401_0003_expand_staging_gifts.py  20260401_0004_canonical_normalized_records.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/connectors/: __init__.py  registry.py
app/core/: __init__.py  config.py  logging.py
app/db/: base.py  (+1 more)
docs/: ARCHITECTURE.md  Copy of AI_Automation_Ladder_CTO_TDD.docx  Gift Source Directory.xlsx  Problem and Scope.docx  clickup_project_log_2026-03-16_to_2026-04-03.md
frontend/: README.md  package-lock.json  package.json
gift_ingestion_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sample_data/: onecause_source.seed.json
scripts/: seed_onecause_source.py
tests/: conftest.py  test_connector_registry.py  test_connector_validation.py  test_dedupe.py  test_everyorg_dashboard_import.py  test_everyorg_demo_api.py  test_everyorg_webhook.py  test_file_imports_api.py  test_gmail_connector.py  test_gmail_normalization.py  test_gmail_source_api.py  test_ingestion_service.py  test_normalization.py  test_onecause_connector.py  test_pledge_connector.py  test_pledge_csv_import.py  test_scheduler_api.py  test_sources_api.py  test_structured_tabular_import_service.py  test_ui.py  test_ui_console_api.py
(+104 files in other folders)
